<resources>
    <string name="app_name">Budget App</string>

    <!--PREFERENCES-->
    <string name="pref_user_uid">user_uid</string>
    <string name="pref_username">username</string>
    <string name="pref_account_id">account_id</string>
    <string name="pref_accountName">account_name</string>

    <!--menu items-->
    <string name="action_accounts">Select account</string>
    <string name="action_add_account">Add account</string>
    <string name="action_log_in">Log in</string>
    <string name="action_log_out">Log out</string>
    <string name="action_app_info">App info</string>

    <!-- tabs  -->
    <string name="tab_item_account">Account</string>
    <string name="tab_item_chart">Chart</string>
    <string name="tab_item_members">Members</string>

    <!--fragments titles-->
    <string name="frag_title_members">Account members:</string>
    <string name="frag_title_chart">Chart</string>


    <string name="title_home">Welcome!</string>
    <string name="title_new_account">Create new account</string>
    <string name="title_activity_login">Sign in</string>

    <!--dialog accounts list-->
    <string name="dialog_accounts_title">Select account:</string>

    <!--dialog add member-->
    <string name="dialog_add_member_title">Add member:</string>
    <string name="dialog_add_member_email_hint">Type username:</string>

    <!--dialog add member list-->
    <string name="dialog_add_member_list_title">Select member:</string>

    <!--TransactionActivity-->
    <string name="et_add_trans">New Transaction</string>
    <string name="et_category">Category</string>
    <string name="et_amount">Amount</string>
    <string name="btn_amount">Add Transaction</string>
    <string name="btn_income">Income</string>
    <string name="btn_expens">Expense</string>

    <!--CreateAccountActivity-->
    <string name="et_acc_create">Create new account</string>
    <string name="radio_acc_weekly">Weekly</string>
    <string name="radio_acc_monthly">Monthly</string>
    <string name="et_acc_name">Account Name</string>
    <string name="et_acc_balance">Starting balance</string>
    <string name="et_acc_adjustment">Adjusted by</string>
    <string name="et_acc_start_date">Start date</string>
    <string name="et_acc_timescale">Cycle</string>
    <string name="btn_acc_add">Create Account</string>



    <!-- Transactions category-->
    <string name="category_1">Shopping</string>
    <string name="category_2">Petrol</string>
    <string name="category_3">Takeaway</string>
    <string name="category_4">Grocery</string>
    <string name="category_5">Cinema</string>


    <!-- Strings related to login -->
    <string name="btn_existing_user">Existing User</string>
    <string name="btn_new_user">New User</string>
    <string name="btn_log_in">Log In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">User name</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_password_number">This password must contain number</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to create transaction -->
    <string name="error_field_required_transaction">Enter amount</string>
    <string name="error_category_transaction">Select category</string>

    <!-- Strings related to create account -->
    <string name="error_field_required_acc_name">Enter account name</string>
    <string name="error_field_required_start_balance">Enter starting balance</string>

</resources>
